--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -1086,7 +1086,7 @@ Contrary to our expectations, the rmANOVA revealed no decrease in performance *d
 ```
 
 However, RTs increased with increasing n-back level (`r apa_print(hypothesis1b_rmanova)$full_result`).
-RTs were longer for 3- than 2-back (`r apa_print(pairs(emmeans(object = hypothesis1b_rmanova$aov,specs = "level"))[1]`), but not different between 2- and 4-back or 3- and 4-back.
+RTs were longer for 3- than 2-back (`r apa_print(pairs(emmeans(object = hypothesis1b_rmanova$aov,specs = "level")))[1]`), but not different between 2- and 4-back or 3- and 4-back.
 Even though *d'* did not decrease, the increases in RT indicate an increase in objective task load.
 
 ```{r Hypothesis_1c, echo=FALSE, message=FALSE, warning=FALSE}
@@ -1369,6 +1369,131 @@ This can be considered preliminary proof-of-concept, as this behavioural pattern
   # % of variance can be explained by differences between persons
   var_m0_h2b <- as.data.frame(VarCorr(m0_h2b))
   icc_h2b <- var_m0_h2b$vcov[1] / (var_m0_h2b$vcov[1] + var_m0_h2b$vcov[2]) 
+  
+  
+  # random slopes model --------------------------------------------------------
+  
+  ## maximal model ---- 
+  m1_h2b <- lmer(sv ~ level.cwc * nfc.cgm + dprime.cwc + rt.cwc + correct.cwc + postcorrect.cwc + (level.cwc|subject), 
+                 data = h2b_data,
+                 REML = T) # parameters estimated by restricted log-likelihood maximization
+  
+  
+  ## plot model fit of the final model ----
+  m1_h2b_fit <- plot_model(m1_h2b, type = "diag")
+  
+  
+  # prepare MLM results for reporting ------------------------------------------
+  
+  # get random and fixed effects
+  m1_h2b.ranef <- as.data.frame(summary(m1_h2b)$varcor)
+  m1_h2b.fixef <- summary(m1_h2b)$coefficients
+  
+  # prepare table
+  h2b_result.table <- as.data.frame(cbind(row.names(m1_h2b.fixef[-c(6,7),]), 
+                                          m1_h2b.fixef[-c(6,7),c(1, 2, 5)]))
+  h2b_result.table$ranef.sd <- NA
+  h2b_result.table$ranef.sd[c(1,2)] <- m1_h2b.ranef$sdcor[c(1,2)]
+ 
+  colnames(h2b_result.table)[1] <- "Parameter"
+  colnames(h2b_result.table)[2] <- "Beta"
+  colnames(h2b_result.table)[3] <- "$SE$"
+  colnames(h2b_result.table)[4] <- "$p$-value"
+  colnames(h2b_result.table)[5] <- "Random Effects (SD)"
+
+  row.names(h2b_result.table) <- NULL
+  h2b_result.table$Parameter[1:6] <- c("Intercept", "n-back level", "NFC", "d'", "RT", "level x NFC")
+
+  h2b_result.table[2:5] <- lapply(h2b_result.table[2:5], as.numeric)
+  h2b_result.table[c(2,3,5)] <- round(h2b_result.table[c(2,3,5)], digits = 2)
+  h2b_result.table[4] <- round(h2b_result.table[4], digits = 3)
+  
+  h2b_result.table$`$p$-value`[which(h2b_result.table$`$p$-value`<.01)] <- 
+    paste0(h2b_result.table$`$p$-value`[which(h2b_result.table$`$p$-value`<.01)],"*")
+  h2b_result.table$`$p$-value`[which(h2b_result.table$`$p$-value`<.05)] <- 
+    paste0(h2b_result.table$`$p$-value`[which(h2b_result.table$`$p$-value`<.05)],"*")
+  h2b_result.table$`$p$-value`[which(h2b_result.table$`$p$-value`<.001)] <- 
+    paste0("<.001***")
+  
+  h2b_result.table$`Random Effects (SD)`[3:6] <- paste0("")
+   
+  table_1 <-
+    kbl(h2b_result.table,
+    caption = "Effects of n-back load level on subjective value controlled 
+    for task performance (d' and reaction time), correct and postcorrect trials.",
+    booktabs = T,                          # no vertical lines
+    escape = F,                            # correctly print special characters)
+    align = c("l",rep("r",7))) %>%         # right aligns the text in every numerical column
+    kable_styling(latex_options = c("striped")) %>%
+    footnote(general = "NFC = Need for Cognition, SE = standard error. ***$p$ < .001, **$p$ < .01, *$p$ < 0.5.",
+            escape = F,                    # correctly print special characters
+            threeparttable = T)            # line breaks in the footnote
+   
+    
+  # simple slopes analysis -----------------------------------------------------
+  
+  m1_h2b.ss <- sim_slopes(m1_h2b, pred = level.cwc, modx = nfc.cgm, centered = "none", 
+                    cond.int = T,                       # print conditional intercepts
+                    control.fdr = T)                    # adjust false discovery rate
+  
+  #create table
+  h2b_ss.table <- as_huxtable(m1_h2b.ss)
+  h2b_ss.table[1,] <- c("Value of NFC", "Slope of N-Back Level", "Conditional Intercept")
+  h2b_ss.table <- h2b_ss.table[-2,]
+  h2b_ss.table[2:4,1] <- c("- 1 SD", "Mean", "+ 1 SD")  
+  
+  # calculate Johnson-Neyman intervals
+  h2b_jn <- johnson_neyman(model = m1_h2b, pred = level.cwc, modx = nfc.cgm, control.fdr = T)
+  h2b_jn.int <- h2b_jn$bounds
+  
+  # save plot
+  h2b_jn.plot <- h2b_jn$plot
+  
+  # create interaction plot
+  h2b_ss.plot <- interact_plot(m1_h2b, pred = level.cwc, modx = nfc.cgm, centered = "none",
+                               plot.points = T, point.shape = T,
+                               x.label = "n back level", y.label = "subjective value",
+                               legend.main = "NFC", interval = T) + theme_apa()    
+```
+
+```{r SpecificationCurveAnalysis, echo=FALSE, message=FALSE, warning=FALSE, fig.show='hide'}
+
+  # Here we repeat the multi level model with all analysis pipelines.
+
+  for (i in 1:length(pipelines_data)) {
+    
+    # make a temporary copy of the data frame
+    
+    sca_data <- pipelines_data[[i]]
+    
+    # get a subset without RT = NA
+    
+    sca_data <- droplevels(subset(sca_data[ ,c("subject", "level", "sv", "dprime", "correct", "postcorrect", "rt", "nfc")], subset = !is.na(rt)))
+    
+    # center the predictors
+    
+        # centering the level 1 predictors (d', RT, level, correct, postcorrect) within cluster
+        
+        sca_data$dprime.cwc       <- sca_data$dprime - (ave(sca_data$dprime, sca_data$subject, FUN = function(x) mean(x, na.rm = T)))
+        sca_data$rt.cwc           <- sca_data$rt - (ave(sca_data$rt, sca_data$subject, FUN = function(x) mean(x, na.rm = T)))
+        sca_data$level.cwc        <- sca_data$level - (ave(sca_data$level, sca_data$subject, FUN = function(x) mean(x, na.rm = T)))
+        sca_data$correct.cwc      <- sca_data$correct - (ave(sca_data$correct, sca_data$subject, FUN = function(x) mean(x, na.rm = T)))
+        sca_data$postcorrect.cwc  <- sca_data$postcorrect - (ave(sca_data$postcorrect, sca_data$subject, FUN = function(x) mean(x, na.rm = T)))
+        
+        # centering the level 2 predictor NFC at the grand mean
+
+        sca_data$nfc.cgm <- scale(sca_data$nfc, scale = F)
+        
+    # define the null model
+    
+    m0_sca <- lmer(sv ~ 1 + (1|subject), data = sca_data, REML = T)
+    
+    # intra-class-correlation
+    
+    var_m0_sca <- as.data.frame(VarCorr(m0_sca))
+    icc_sca <- var_m0_sca$vcov[1] / (var_m0_sca$vcov[1] + var_m0_sca$vcov[2])
+  
+  }
   
   
   # random slopes model --------------------------------------------------------
