--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -1330,7 +1330,8 @@ This can be considered preliminary proof-of-concept, as this behavioural pattern
   # get subset for MLM without RT = NA
   
   h2b_data <- droplevels(subset(h2b_data[ ,c("subject", "level", "sv", "dprime", "correct", "postcorrect", "rt", "nfc")],
-                               subset = !is.na(rt)))
+                               subset = !is.na(rt)
+                               & level > 1)) #FIXME
   
   
   # center predictors ----------------------------------------------------------
@@ -1490,14 +1491,14 @@ This can be considered preliminary proof-of-concept, as this behavioural pattern
   
   
   # calculate Johnson-Neyman intervals
-  h2b_jn <- johnson_neyman(model = m1_h2b, pred = level.cwc, modx = nfc.cgm, control.fdr = T)
-  h2b_jn.int <- h2b_jn$bounds
+  h2c_jn <- johnson_neyman(model = m1_h2b, pred = level.cwc, modx = nfc.cgm, control.fdr = T)
+  h2c_jn.int <- h2c_jn$bounds
   
   # save plot
-  h2b_jn.plot <- h2b_jn$plot
+  h2c_jn.plot <- h2c_jn$plot
   
   # create interaction plot
-  h2b_ss.plot <- interact_plot(m1_h2b, pred = level.cwc, modx = nfc.cgm, centered = "none",
+  h2c_ss.plot <- interact_plot(m1_h2b, pred = level.cwc, modx = nfc.cgm, centered = "none",
                                plot.points = T, point.shape = T,
                                x.label = "n-back level", y.label = "subjective value",
                                legend.main = "NFC", interval = T) + theme_apa() 
@@ -1586,11 +1587,11 @@ Differences between subjects could explain `r round((icc_h2b*100), digits = 0)` 
 However, NFC had no statistically significant effect on SVs (`r apa_print(m1_h2b)$full_result$nfc_cgm`).
 The simple slopes analysis revealed a significant difference in slope of n-back level for three different expressions of NFC (Table 2, Figure 2).
 `r table_2`
-`r h2b_ss.plot`
+`r h2c_ss.plot`
 The Johnson-Neyman plot (Figure 2) visualizes the significance of the slope of n-back level at different values of NFC.
-The Johnson-Neyman interval is [`r h2b_jn.int`].
+The Johnson-Neyman interval is [`r h2c_jn.int`].
 Consequently, the slope of n-back level was not significant for individuals with very low NFC values.    
-`r h2b_jn.plot`
+`r h2c_jn.plot`
 
 ## alternative: `r h2b_jn` 
 
