tried constructing ggplot for SSA (not done yet)

--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -1509,8 +1509,58 @@ This can be considered preliminary proof-of-concept, as this behavioural pattern
   h2c_ss.plot <- interact_plot(m1_h2b, pred = level.cwc, modx = nfc.cgm, centered = "none",
                                plot.points = T, point.shape = T,
                                x.label = "n-back level", y.label = "subjective value",
-                               legend.main = "NFC", interval = T) + theme_apa() 
+                               legend.main = "NFC", interval = T) + theme_apa()
+  
+  # add column to data frame, which indexes the Mean+/-SD groups
+  h2b_data$nfc_group <- ifelse(h2b_data$nfc.cgm > (mean(h2b_data$nfc.cgm) + sd(h2b_data$nfc.cgm)), "+1 SD",
+                               ifelse(h2b_data$nfc.cgm < (mean(h2b_data$nfc.cgm) - sd(h2b_data$nfc.cgm)), "-1 SD", "Mean"))
+  # add columns to data frame, which index the max/min value of SV per group
+  h2b_data$sv_groupmax <- ifelse(h2b_data$nfc_group == "+1 SD" & h2b_data$level == 2,
+                                 max(h2b_data$sv[h2b_data$nfc_group == "+1 SD" & h2b_data$level == 2]),
+                                 ifelse(h2b_data$nfc_group == "+1 SD" & h2b_data$level == 3,
+                                        max(h2b_data$sv[h2b_data$nfc_group == "+1 SD" & h2b_data$level == 3]),
+                                        ifelse(h2b_data$nfc_group == "+1 SD" & h2b_data$level == 4,
+                                               max(h2b_data$sv[h2b_data$nfc_group == "+1 SD" & h2b_data$level == 4]),
+                                               ifelse(h2b_data$nfc_group == "-1 SD" & h2b_data$level == 2,
+                                                      max(h2b_data$sv[h2b_data$nfc_group == "-1 SD" & h2b_data$level == 2]),
+                                                      ifelse(h2b_data$nfc_group == "-1 SD" & h2b_data$level == 3,
+                                                             max(h2b_data$sv[h2b_data$nfc_group == "-1 SD" & h2b_data$level == 3]),
+                                                             ifelse(h2b_data$nfc_group == "-1 SD" & h2b_data$level == 4,
+                                                                    max(h2b_data$sv[h2b_data$nfc_group == "-1 SD" & h2b_data$level == 4]),
+                                                                    ifelse(h2b_data$nfc_group == "Mean" & h2b_data$level == 2,
+                                                                           max(h2b_data$sv[h2b_data$nfc_group == "Mean" & h2b_data$level == 2]),
+                                                                           ifelse(h2b_data$nfc_group == "Mean" & h2b_data$level == 3,
+                                                                                  max(h2b_data$sv[h2b_data$nfc_group == "Mean" & h2b_data$level == 3]),
+                                                                                  max(h2b_data$sv[h2b_data$nfc_group == "Mean" & h2b_data$level == 4])))))))))
+  h2b_data$sv_groupmax <- ifelse(h2b_data$nfc_group == "+1 SD" & h2b_data$level == 2,
+                                 min(h2b_data$sv[h2b_data$nfc_group == "+1 SD" & h2b_data$level == 2]),
+                                 ifelse(h2b_data$nfc_group == "+1 SD" & h2b_data$level == 3,
+                                        min(h2b_data$sv[h2b_data$nfc_group == "+1 SD" & h2b_data$level == 3]),
+                                        ifelse(h2b_data$nfc_group == "+1 SD" & h2b_data$level == 4,
+                                               min(h2b_data$sv[h2b_data$nfc_group == "+1 SD" & h2b_data$level == 4]),
+                                               ifelse(h2b_data$nfc_group == "-1 SD" & h2b_data$level == 2,
+                                                      min(h2b_data$sv[h2b_data$nfc_group == "-1 SD" & h2b_data$level == 2]),
+                                                      ifelse(h2b_data$nfc_group == "-1 SD" & h2b_data$level == 3,
+                                                             min(h2b_data$sv[h2b_data$nfc_group == "-1 SD" & h2b_data$level == 3]),
+                                                             ifelse(h2b_data$nfc_group == "-1 SD" & h2b_data$level == 4,
+                                                                    min(h2b_data$sv[h2b_data$nfc_group == "-1 SD" & h2b_data$level == 4]),
+                                                                    ifelse(h2b_data$nfc_group == "Mean" & h2b_data$level == 2,
+                                                                           min(h2b_data$sv[h2b_data$nfc_group == "Mean" & h2b_data$level == 2]),
+                                                                           ifelse(h2b_data$nfc_group == "Mean" & h2b_data$level == 3,
+                                                                                  min(h2b_data$sv[h2b_data$nfc_group == "Mean" & h2b_data$level == 3]),
+                                                                                  min(h2b_data$sv[h2b_data$nfc_group == "Mean" & h2b_data$level == 4])))))))))
     
+  
+  h2c_ss.plot <- ggplot(h2b_data, aes(x = level.cwc, y = sv, color = nfc_group, group = nfc_group)) +
+    geom_point() +
+    geom_smooth(method = interactions::sim_slopes(m1_h2b, pred = level.cwc, modx = nfc.cgm,
+                                                  centered = "none", cond.int = T, control.fdr = T, confint = T),
+                data = NULL, mapping = aes(fill = nfc_group, alpha = .15), se = TRUE) # the alpha stands for the opacity of the CIs
+    
+  h2c_ss.plot <- ggplot(h2b_data, aes(x = level.cwc, y = sv, color = nfc_group, group = nfc_group)) +
+    geom_point() +
+    geom_ribbon(aes(ymax = sv_groupmax, ymin = sv_groupmin, fill = "band", color = nfc_group), alpha = .15)
+  
 ```
 
 ```{r SpecificationCurveAnalysis, echo=FALSE, message=FALSE, warning=FALSE, fig.show='hide'}
